@@ -4,11 +4,14 @@ jEdit 4.4 version history
 
 {{{ Version 4.4.2
 
-Thanks to Björn "Vampire" Kautler and Matthieu Casanova for contributing to this release.
+Thanks to Björn "Vampire" Kautler, Alan Ezust, and Matthieu Casanova for 
+contributing to this release.
 
 {{{ Bug Fixes
 - Untitled buffer should not be created on VFS without write capability
   (#3399387) (Matthieu Casanova)
+
+- Fixed NPE when starting jEdit with nosettings (#3401814) (Matthieu Casanova)
 
 - Fixed a corner case when trying to move caret during a buffer operation
   (loading, transaction, undo) prevent to move the caret forever
